# core/internal/handler/handler.go
@@ -13,3 +13,8 @@ func New(repo *repository.Repository) *Handler {
 		repo: repo,
 	}
 }
+
+// Common response
+type ErrorResponse struct {
+	Message string `json:"message"`
+}
